# HENRY

./: .clang-format  .gitignore  .gitmodules  Boat.cpp  Boat.h  CMakeLists.txt  CppProperties.json  GPS.cpp  GPS.h  HENRY.cpp  HENRY.h  Magnetometer.h  Motor.cpp  Motor.h  NewRotaryEncoder.cpp  OrientationSensor.cpp  PETE.cpp  PETE.h  README.md  Receiver.cpp  Receiver.h  RotaryEncoder.cpp  RotaryEncoder.h  TOFSensor.cpp  TOFSensor.h  Vector.cpp  premake5.lua  vec.cpp  vec.h
Master/: CMakeLists.txt  Master.cpp
Testing/: CMakeLists.txt
cam_test/: CMakeLists.txt  main.cpp
debug/: .clang-format  .gitignore  CMakeLists.txt
debug/src/: debug.hpp
debug/src/debug/: log.cpp  profile.cpp  timer.cpp
docs/: BuildFromSources.md  BuildingFromSource.md  WritingAPremakeScript.md
examples/Master/: Master.ino
examples/gps/: gps.ino
gpu_cuda/: Makefile  cuda.cu  cuda.hpp
main/: CMakeLists.txt  premake5.lua
main/src/: main.cpp  shaders.hpp
main/src/main_arduino/: main_arduino.ino
master/: CMakeLists.txt  main.cpp  shaders.hpp
sailbot/: CMakeLists.txt  premake5.lua
sailbot/src/: sailbot.hpp
src/: .clang-format  Boat.cpp  Boat.h  GPS.cpp  GPS.h  HENRY.cpp  HENRY.h  Magnetometer.cpp  Magnetometer.h  Motor.cpp  Motor.h  NeoPixelStrip.cpp  NeoPixelStrip.h  RemoteControl.cpp  RemoteControl.h  RotaryEncoder.cpp  RotaryEncoder.h  Vector.cpp  Vector.h  ext-Encoder.cpp
test/: CMakeLists.txt  premake5.lua
test/src/: main.cpp  my_test.cpp  test.cpp
test/src/test_arduino/: test_arduino.ino
testing/: premake5.lua
testing/src/: my_test.cpp  testing.cpp
(+19 files in other folders)
